[project]
name = "omninat-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zihan Wang", email = "jameszh.wang@mail.utoronto.ca" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
omninat-mcp = "omninat_mcp:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
