[project]
name = "omninat-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zihan Wang", email = "jameszh.wang@mail.utoronto.ca" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.27.0",
    "pillow>=12.2.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.6.2",
]

[project.scripts]
omninat-mcp = "omninat_mcp:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
